--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
   }
 
   async function menuju(){
-    pesanwhatsapp = "Ucapannya Udah Nihhh, Kamu Traktirin Aku Kapan? 🥳";
+    pesanwhatsapp = "Ayokkk jalan, Aku traktirinn nihh 🥳";
     await swals.fire('OK!', 'Kirim jawabannya ke WhatsApp aku, ya!', 'success');
     window.location = "https://api.whatsapp.com/send?phone=6288216652446&text=" + pesanwhatsapp;
   }
